# add_executable(trajectory ex_trajectory.cpp)
# target_link_libraries(trajectory meii)

# add_executable(mahiexoii_pos_ctrl ex_mahiexoii_pos_ctrl.cpp)
# target_link_libraries(mahiexoii_pos_ctrl meii)

# add_executable(pos_control_nathan ex_pos_control_nathan.cpp)
# target_link_libraries(pos_control_nathan meii)

# add_executable(ex_pos_control_nathan_rob ex_pos_control_nathan_rob.cpp)
# target_link_libraries(ex_pos_control_nathan_rob meii)

# add_executable(dynamic_motion_primitive ex_dynamic_motion_primitive.cpp)
# target_link_libraries(dynamic_motion_primitive meii)

# add_executable(rom_demo ex_rom_demo.cpp)
# target_link_libraries(rom_demo meii)

# add_executable(virtual_rom_demo ex_virtual_rom_demo.cpp)
# target_link_libraries(virtual_rom_demo meii)

# add_executable(virtual_rom_demo_new ex_virtual_rom_demo_new.cpp)
# target_link_libraries(virtual_rom_demo_new meii)